--- a/blocks/places/place/__url-heading/place_url-heading.css
+++ b/blocks/places/place/__url-heading/place_url-heading.css
@@ -1,4 +1,4 @@
-.place__website__url-heading {
+.place__url-heading {
     position: relative;
     max-width: 456px;
     /*все равно дефтулзы показывают меньше*/
