удалить обёртку footer__container

--- a/blocks/footer/__container/footer__container.css
+++ b/blocks/footer/__container/footer__container.css
@@ -1,5 +1,5 @@
+/*обёртку нужноо удалить*/
 .footer__container {
-    border: 2px solid red;
     padding: 0px 0px 24px 0px;
     margin: 0px;
     max-width: 1184px;
