--- a/pages/index.css
+++ b/pages/index.css
@@ -46,7 +46,7 @@
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 
 @import url(../blocks/footer/footer.css);
-@import url(../blocks/footer/__container/footer__container.css);
+@import url(../blocks/footer/__container/footer__container.css); /*убрать нужно обёртку*/
 @import url(../blocks/footer/__links/footer__links.css);
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__author/footer__author.css);
