--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,7 +3,7 @@
   }
 .page {
     background-color: #2A2C2F;
-    height: 6875px;
+    /* сказали удалить height: 6875px;*/
     max-width: 1280px;
     /*header выходит за рамки почему-то*/
     font-family: "Inter", "Arial", sans-serif;
