--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,10 +1,9 @@
 .intro__title {
     position: relative;
-    width: 690px;
-    height: 58px;
+    max-width: 690px;
+    /*удалить height: 58px;*/
     margin-top: 92px;
     margin-left: 148px;
-    font-family: 'Inter';
     font-style: normal;
     font-weight: 900;
     font-size: 54px;
@@ -20,9 +19,9 @@
 }
 
 @media screen and (max-width: 768px) {
+    /*title залез на subtitle*/
     .intro__title {
         max-width: 720px;
-        max-height: 58px;
         margin-top: 88px;
         margin-left: 24px;
     }
@@ -32,7 +31,7 @@
     .intro__title {
         max-width: 288px;
         /*опять текст неправильно свернулся*/
-        max-height: 70px;
+        /*удалить нужно max-height: 70px;*/
         margin-top: 64px;
         margin-left: 16px;
         font-size: 32px;
