--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,13 +1,11 @@
 .lead__subtitle {
     position: relative;
     margin: 0px;
-    width: 640px;
-    height: 72px;
+    max-width: 640px;
     margin-top: 32px;
     margin-right: 320px;
     margin-bottom: 0px;
     margin-left: 320px;
-    font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
@@ -34,7 +32,6 @@
 @media screen and (max-width: 320px) {
     .lead__subtitle {
         max-width: 288px;
-        max-height: 40px;
         margin-top: 16px;
         margin-right: 16px;
         margin-left: 16px;
