--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -3,8 +3,8 @@
     /*если родитель - флексбокс z-index работает и без позиционирования*/
     z-index: 1;
     /*задали чтоб затемнение не перекрывало текст*/
-    width: 360px;
-    height: 66px;
+    max-width: 360px;
+    /* удалить нужно height: 66px;*/
     margin: 0px;
     padding: 32px 412px 245px 412px;
     /* если я включу font-family: "Inter"; текст будет выглядеть не как в макете*/
