--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,13 +1,14 @@
+/* заменили везде max-height на min-height*/
 .cover {
     margin: 92px 48px 92px 48px;
     max-width: 1184px;
-    max-height: 740px;
+    min-height: 740px;
 }
 
 @media screen and (max-width: 1024px) {
     .cover {
         max-width: 1024px;
-        max-height: 640px;
+        min-height: 640px;
         margin-right: 0px;
         margin-left: 0px;
     }
@@ -16,7 +17,7 @@
 @media screen and (max-width: 768px) {
     .cover {
         max-width: 768px;
-        max-height: 480px;
+        min-height: 480px;
         margin-top: 50px;
         /*90 - 40 нижний паддинг place__paragraphs*/
         margin-bottom: 88px;
@@ -26,7 +27,7 @@
 @media screen and (max-width: 320px) {
     .cover {
         max-width: 320px;
-        max-height: 200px;
+        min-height: 200px;
         margin-top: 16px;
         /*66 - 40 нижний паддинг place__paragraphs*/
         margin-bottom: 64px;
