--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -2,12 +2,11 @@
     /*цифры не должны быть жирные ОШИБКА*/
     position: relative;
     max-width: 690px;
-    max-height: 90px;
+    min-height: 90px;
     padding: 0px;
     margin-top: 33px;
     margin-left: 148px;
     margin-bottom: 0px;
-    font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
@@ -31,7 +30,6 @@
 @media screen and (max-width: 320px) {
     .intro__list {
         max-width: 288px;
-        max-height: 90px;
         margin-top: 34px;
         margin-left: 16px;
     }
