--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,13 +1,11 @@
 .lead__caption {
     position: relative;
-    width: 158px;
-    height: 14px;
+    max-width: 158px;
     white-space: nowrap;
     /*текст в одну строку встал*/
     margin-top: 8px;
     margin-bottom: 0px;
     margin-left: 148px;
-    font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 10px;
