--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,7 +6,7 @@
     /*отступы для колонок*/
     column-gap: 16px;
     /*три ряда*/
-    grid-template-rows: repeat(3, 213px);
+    /*удалить количество рядов grid-template-rows: repeat(3, 213px);*/
     /*отступы для рядов*/
     row-gap: 16px;
     /*ОШИБКА у последнего ряда занулить margin-bottom*/
@@ -16,7 +16,7 @@
 @media screen and (max-width: 1024px) {
     .photo-grid {
         grid-template-columns: repeat(3, 300px);
-        grid-template-rows: repeat(4, 225px);
+        /*удалить количество рядов grid-template-rows: repeat(4, 225px);*/
         column-gap: 14px;
         row-gap: 14px;
     }
@@ -26,7 +26,7 @@
     .photo-grid {
         margin-top: 88px;
         grid-template-columns: repeat(2, 352px);
-        grid-template-rows: repeat(6, 264px);
+        /*удалить количество рядов grid-template-rows: repeat(6, 264px);*/
         column-gap: 16px;
         row-gap: 16px;
     }
@@ -36,7 +36,7 @@
     .photo-grid {
         margin-top: 64px;
         grid-template-columns: repeat(1, 288px);
-        grid-template-rows: repeat(12, 216px);
+        /*удалить количество рядов grid-template-rows: repeat(12, 216px);*/
         column-gap: 16px;
         row-gap: 12px;
     }
