--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -2,7 +2,6 @@
     position: relative;
     max-width: 456px;
     /*484px*/
-    max-height: 46px;
     margin-top: 186px;
     /*198пх - 12пх и 110-12пх в places*/
     margin-right: 176px;
@@ -33,7 +32,7 @@
         padding-top: 32px;
         margin-right: 16px;
         margin-left: 16px;
-        width: 288px;
+        max-width: 288px;
     }
 }
 
