--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -7,15 +7,18 @@
     max-width: 30px;
     margin-top: 46px;
     margin-left: 931px;
+    margin-bottom: 0px;
+    padding-left: 0px;
     /*отступ от лого + встал в одну строку с ним*/
     border-radius: 0px;
+    /*синим горит почему-то если делать списком*/
     color: #FFFFFF;
     font-size: 24px;
     font-weight: 400;
     line-height: 28px;
     letter-spacing: 0em;
     text-align: right;
-    text-decoration: underline;
+    /*list-style-type: none;*/
 }
 
 @media screen and (max-width:1024px) {
