--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,6 @@
 @import url(../vendor/normalize.css);
 
-/*нужно подключить шрифты inter @import url(../vendor/fonts/inter/)*/
+/*подключили шрифты inter @import url(../vendor/fonts/inter/)*/
 @import url(../vendor/fonts/inter/Inter-Regular.woff2);
 @import url(../vendor/fonts/inter/Inter-Regular.woff);
 @import url(../vendor/fonts/inter/Inter-Bold.woff2);
@@ -12,7 +12,10 @@
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
+/*@import url(../blocks/header/__links/header__links.css);*/
 @import url(../blocks/header/__lang-link/header__lang-link.css);
+/*подключили модификатор для подчеркивания у ссылки*/
+@import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
 
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__title/lead__title.css);
@@ -24,7 +27,8 @@
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
-@import url(../blocks/intro/__span-accent/intro__span-accent.css); /*подключили стили для цифр*/
+/*подключили стили для цифр*/
+@import url(../blocks/intro/__span-accent/intro__span-accent.css);
 
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
@@ -46,7 +50,8 @@
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 
 @import url(../blocks/footer/footer.css);
-@import url(../blocks/footer/__container/footer__container.css); /*убрать нужно обёртку*/
+/*убрали обёртку*/
+/*@import url(../blocks/footer/__container/footer__container.css);*/
 @import url(../blocks/footer/__links/footer__links.css);
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__author/footer__author.css);
