--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,8 +1,7 @@
 .cover__overlay {
     background-image: url("../../../images/cover-trains.jpg");
     background-size: cover;
-    /*width: 100%;*/
-    width: 100%;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
