--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -9,6 +9,10 @@
     line-height: 18px;
     color: #FFFFFF;
 }
+.footer__link:hover {
+    opacity: 0.5;
+    transition: 1s;
+}
 
 @media screen and (max-width: 320px) {
     .footer__link {
