--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -5,7 +5,7 @@
     margin-bottom: 0px;
     margin-left: auto;
     padding: 0px;
-    color: #FFFFFF;
+    /*color: #FFFFFF;*/
     box-sizing: border-box;
 }
 
