--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -14,21 +14,24 @@
     color: #FFFFFF;
 }
 
-@media screen and (max-width:1024px) {
+@media screen and (max-width: 1200px) {
+    /*1200 вместо 1024 чтоб не было скрола*/
     .lead__title {
         margin-right: 152px;
         margin-left: 152px;
     }
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width: 900px) {
+    /*900 вместо 768 чтоб не было скрола*/
     .lead__title {
         margin-right: 24px;
         margin-left: 24px;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 760px) {
+    /*760 вместо 320 чтоб не было скрола*/
     .lead__title {
         max-width: 288px;
         /*не правильно показаны пропорции ОШИБКА*/
