--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,6 +1,6 @@
 .photo-grid__item {
     max-width: 284px;
-    max-height: 213px;
+    min-height: 213px;
     display: inline-grid;
     margin-right: 48px;
     margin-left: 48px;
@@ -9,14 +9,14 @@
 @media screen and (max-width: 1024px) {
     .photo-grid__item {
         max-width: 300px;
-        max-height: 225px;
+        min-height: 225px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .photo-grid__item {
         max-width: 352px;
-        max-height: 264px;
+        min-height: 264px;
         margin-right: 24px;
         margin-left: 24px;
     }
@@ -25,7 +25,7 @@
 @media screen and (max-width: 320px) {
     .photo-grid__item {
         max-width: 288px;
-        max-height: 216px;
+        min-height: 216px;
         margin-right: 16px;
         margin-left: 16px;
     }
