--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -9,7 +9,8 @@
     margin-bottom: 0px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1200px) {
+    /*1200 вместо 1024*/
     .place__website {
         margin-right: 48px;
     }
@@ -24,8 +25,8 @@
     }
 }
 
-@media screen and (max-width: 320px) {
-
+@media screen and (max-width: 700px) {
+    /*вместо 320 700 все равно торчит сбоку*/
     /*не встает под title*/
     .place__website {
         margin-top: 0px;
