--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,7 +1,8 @@
 .cover__overlay {
     background-image: url("../../../images/cover-trains.jpg");
     background-size: cover;
-    max-width: 100%;
+    max-width: 1184px;
+    margin: 92px 0px 0px 0px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -12,6 +13,24 @@
     /*пропорция картинки ширины к высоте*/
     z-index: 0;
     /*задали чтоб затемнение не перекрывало текст*/
+}
+@media screen and (max-width: 1200px) {
+    /*1200 вместо 1024*/
+    .cover__overlay {
+        max-width: 1024px;
+    }
+}
+@media screen and (max-width: 1000px) {
+    /*1000 вместо 768*/
+    .cover__overlay {
+        max-width: 768px;
+    }
+}
+@media screen and (max-width: 400px) {
+    /*760 вместо 320*/
+    .cover__overlay {
+        max-width: 320px;
+    }
 }
 
 .cover__overlay:before {
