--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -15,7 +15,8 @@
     color: #FFFFFF;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1100px) {
+    /*1100 вместо 1024*/
     .cover__title {
         padding-top: 195px;
         padding-right: 232px;
@@ -31,7 +32,7 @@
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 500px) {
 
     /*высота больше нужного из-за этого subtitle далеко стоит*/
     .cover__title {
