--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -2,7 +2,7 @@
     box-sizing: content-box;
     position: relative;
     max-width: 484px;
-    margin: 0px 0px 0px 0px;
+    margin: 0px;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -13,6 +13,11 @@
 @media screen and (max-width: 1024px) {
     .place__paragraph {
         max-width: 456px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .place__paragraph {
+        font-size: 16px;
     }
 }
 
