--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -8,7 +8,16 @@
     grid-column-gap: 40px;
     box-sizing: border-box;
 }
-
+@media screen and (max-width: 1024px) {
+    .place {
+        grid-column-gap: 32px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .place {
+        grid-column-gap: 28px;
+    }
+}
 @media screen and (max-width: 320px) {
     .place {
         grid-template-columns: none;
