--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -33,7 +33,7 @@
 }
 
 @media screen and (max-width: 500px) {
-
+    /*500 вместо 320*/
     /*высота больше нужного из-за этого subtitle далеко стоит*/
     .cover__title {
         max-width: 288px;
