--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -32,7 +32,8 @@
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 500px) {
+    /*500 вместо 320*/
     .cover__subtitle {
         max-width: 288px;
         padding-top: 16px;
