--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -27,7 +27,8 @@
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 750px) {
+    /*700 вместо 320*/
     .intro__title {
         max-width: 288px;
         /*опять текст неправильно свернулся*/
