--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -3,7 +3,8 @@
     margin: 48px 148px 40px 0px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1200px) {
+    /*1200 вместо 1024*/
     .place__paragraphs {
         margin-right: 32px;
         /*выходит за рамки блока*/
@@ -11,7 +12,8 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1000px) {
+    /*вместо 768 1000px*/
     .place__paragraphs {
         margin-right: 24px;
         max-width: 352px;
