--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -14,20 +14,32 @@
     z-index: 0;
     /*задали чтоб затемнение не перекрывало текст*/
 }
-@media screen and (max-width: 1200px) {
-    /*1200 вместо 1024*/
+@media screen and (max-width: 1100px) {
+    /*1100 вместо 1024*/
     .cover__overlay {
         max-width: 1024px;
     }
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 800px) {
     /*1000 вместо 768*/
     .cover__overlay {
         max-width: 768px;
     }
 }
+@media screen and (max-width: 700px) {
+    /*мой промежуточный*/
+    .cover__overlay {
+        max-width: 600px;
+    }
+}
+@media screen and (max-width: 600px) {
+    /*мой промежуточный*/
+    .cover__overlay {
+        max-width: 500px;
+    }
+}
 @media screen and (max-width: 400px) {
-    /*400 вместо 320*/
+    /*500 вместо 320*/
     .cover__overlay {
         max-width: 320px;
     }
