--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -15,7 +15,7 @@
     color: #FFFFFF;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1200px) {
     /*1100 вместо 1024*/
     .cover__title {
         padding-top: 195px;
@@ -31,9 +31,18 @@
         padding-left: 104px;
     }
 }
-
-@media screen and (max-width: 500px) {
-    /*500 вместо 320*/
+@media screen and (max-width: 600px) {
+    /*мой промежуточный*/
+    .cover__title {
+        max-width: 360px;
+        padding-right: 72px;
+        padding-bottom: 52px;
+        padding-left: 72px;
+        font-size: 52px;
+    }
+}
+@media screen and (max-width: 400px) {
+    /*400 вместо 320*/
     /*высота больше нужного из-за этого subtitle далеко стоит*/
     .cover__title {
         max-width: 288px;
