--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -6,22 +6,31 @@
     margin-left: 148px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1100px) {
+    /*1100 вместо 1024*/
     .place__image {
         max-width: 440px;
         margin-left: 48px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
+    /*900 вместо 768*/
     .place__image {
         max-width: 340px;
         margin-left: 24px;
     }
+}@media screen and (max-width: 750px) {
+    /*мой промежуточный*/
+    .place__image {
+        max-width: 330px;
+        margin-top: 32px;
+        margin-right: 0px;
+        margin-left: 0px;
+    }
 }
-
-@media screen and (max-width: 750px) {
-    /*750 вместо 320*/
+@media screen and (max-width: 500px) {
+    /*500 вместо 320*/
     .place__image {
         max-width: 320px;
         margin-top: 32px;
