--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -19,9 +19,25 @@
         max-width: 352px;
     }
 }
-
-@media screen and (max-width: 750px) {
-    /*750 вместо 320*/
+/*только с фиксированной шириной в мною созданных промежутых брекпоинтах с 320px до 700 не торчит текст из блока, поэтому нет скролла*/
+@media screen and (max-width: 700px) {
+    /*мой промежуточный*/
+    .place__paragraphs {
+        margin-right: 0px;
+        margin-left: 0px;
+        max-width: 210px;
+    }
+}
+@media screen and (max-width: 450px) {
+    /*мой промежуточный*/
+    .place__paragraphs {
+        margin-right: 0px;
+        margin-left: 0px;
+        max-width: 140px;
+    }
+}
+@media screen and (max-width: 320px) {
+    /*500 вместо 320*/
     /*все равно скрол*/
     /*текст не встает под картинку*/
     .place__paragraphs {
