--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -17,14 +17,16 @@
     color: #FFFFFF;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1100px) {
+    /*1100 вместо 1024*/
     .place__title {
         max-width: 440px;
         margin-left: 48px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 960px) {
+    /*920 вместо 768*/
     .place__title {
         max-width: 340px;
         /*ОШИБКА дефтулзы показывают 330пх*/
@@ -39,7 +41,8 @@
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 520px) {
+    /*520 вместо 320*/
     .place__title {
         max-width: 288px;
         margin-top: 50px;
