--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -14,10 +14,16 @@
     z-index: 0;
     /*задали чтоб затемнение не перекрывало текст*/
 }
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1200px) {
     /*1100 вместо 1024*/
     .cover__overlay {
         max-width: 1024px;
+    }
+}
+@media screen and (max-width: 1050px) {
+    /*мой промежуточный*/
+    .cover__overlay {
+        max-width: 800px;
     }
 }
 @media screen and (max-width: 800px) {
