--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -7,7 +7,8 @@
     background-color: #2A2C2F;
     max-width: 1280px;
     /*header выходит за рамки почему-то*/
-    font-family: "Inter", "Arial", sans-serif; /*итак указан шрифт + альтернативный + удалить везде gont-family*/
+    font-family: "Inter", Arial, sans-serif;
+    /*итак указан шрифт + альтернативный + удалить везде gont-family*/
     margin: 0 auto;
     box-sizing: border-box;
 }
