lead без скролла

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,6 @@
 header {
     max-width: 1280px;
-    display: flex; /*inline*/
+    /*раньше был display: inline*/
+    display: flex;
+    margin-bottom: 0px;
 }
