--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -38,6 +38,7 @@
         margin-left: 467px;
     }
 }
+/*321px - 344px скролл*/
 @media screen and (max-width: 750px) {
     /*750 вместо 320*/
     .header__lang-link {
