--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,18 +1,12 @@
 .lead {
-    margin-top: 50px;
-    /*136 отступ сверху - 86 весь header*/
+    display: flex;
+    flex-direction: column;
+    /*от предыдущего блока header*/
+    margin-top: 56px;
 }
 
-@media screen and (max-width:1024px) {
+@media screen and (max-width: 1024px) {
     .lead {
-        margin-top: 42px;
-        /*128 отступ сверху - 86 header*/
-    }
-}
-
-@media screen and (max-width:320px) {
-    .lead {
-        margin-top: 20px;
-        /*на 22 меньше чем у предыдущего*/
+        margin-top: 48px;
     }
 }
