--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,14 +1,12 @@
 .intro__text {
     position: relative;
     max-width: 690px;
-    min-height: 208px;
     margin-top: 40px;
     margin-left: 148px;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 163%;
-    /* or 26px */
     color: #FFFFFF;
 }
 
@@ -20,6 +18,7 @@
 
 @media screen and (max-width: 768px) {
     .intro__text {
+        max-width: 720px;
         margin-left: 24px;
     }
 }
@@ -29,6 +28,5 @@
         margin-top: 40px;
         margin-left: 16px;
         max-width: 288px;
-        min-height: 520px;
     }
 }
