--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,10 +5,11 @@
 
 .page {
     background-color: #2A2C2F;
-    max-width: 1280px;
-    /*header выходит за рамки почему-то*/
-    font-family: "Inter", Arial, sans-serif;
-    /*итак указан шрифт + альтернативный + удалить везде gont-family*/
+    /*вместо 1280 ширины экрана ставим максимальную ширину контента 1184*/
+    max-width: 1184px;
+    /*благодаря max-width и margin создается контейнер*/
     margin: 0 auto;
+    /*итак указан шрифт + альтернативный*/
+    font-family: "Inter", Arial, sans-serif;
     box-sizing: border-box;
 }
