--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,13 +1,17 @@
 .footer__link {
     padding-top: 0px;
-    padding-right: 18px;
-    padding-left: 0px;
+    padding-right: 0px;
+    padding-left: 18px;
     text-decoration: none;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 18px;
     color: #FFFFFF;
+}
+.footer__link:first-child {
+    /*у него отступ 48пх - margin у footer'a*/
+    padding-left: 0px;
 }
 .footer__link:hover {
     opacity: 0.5;
@@ -19,6 +23,7 @@
         font-size: 24px;
         line-height: 24px;
         padding-top: 32px;
+        padding-left: 0px;
     }
 }
 
