--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,10 +1,38 @@
 .footer {
-    margin-right: 48px;
-    margin-left: 48px;
+    /*вместо 1280 ширины экрана ставим макс ширину контента 1184*/
+    max-width: 1184px;
+    padding-top: 92px;
+    padding-right: 0px;
+    padding-bottom: 24px;
+    padding-left: 0px;
+    display: flex;
+    flex-direction: row;
+    /*элементы центрировались*/
+    justify-content: center;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 1024px) {
     .footer {
-        max-width: 320px;
+        /*макс ширина контента
+        max-width: 928px;*/
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .footer {
+        /*макс ширина контента
+        max-width: 720px;*/
+        padding-top: 88px;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    /*750 вместо 320 чтоб не было скролла*/
+    .footer {
+        /*64px - 32 отступ у линкс сверху*/
+        padding-top: 32px;
+        padding-left: 16px;
+        /*footer__author встал под линки*/
+        flex-direction: column;
     }
 }
